--- a/views/user/navbar.ejs
+++ b/views/user/navbar.ejs
@@ -3,8 +3,11 @@
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <title>Responsive Sticky Navbar</title>
+  <title>Shree Classes</title>
 
+
+  <
+ 
   <!-- Bootstrap CSS CDN -->
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet"
     integrity="sha384-q7z2W7tDdUJzKGoFErXWBl5UdcZFQG5tZ+uvF2AqUb3PjEokPaPJQdMwmVpzR9nS" crossorigin="anonymous" />
