--- a/views/user/about.ejs
+++ b/views/user/about.ejs
@@ -166,7 +166,7 @@
     .feature-icon {
       width: 50px;
       height: 50px;
-      background: linear-gradient(to right, var(--primary), var(--secondary));
+      background: linear-gradient(to right, #C8102E, #2B2B2B);
       border-radius: 50%;
       color: white;
       display: flex;
