--- a/views/user/navbar.ejs
+++ b/views/user/navbar.ejs
@@ -7,7 +7,10 @@
 
 
   
- 
+  <!-- Google Fonts -->
+  <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@400;600&display=swap" rel="stylesheet">
+
+
   <!-- Bootstrap CSS CDN -->
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet"
     integrity="sha384-q7z2W7tDdUJzKGoFErXWBl5UdcZFQG5tZ+uvF2AqUb3PjEokPaPJQdMwmVpzR9nS" crossorigin="anonymous" />
