--- a/views/user/navbar.ejs
+++ b/views/user/navbar.ejs
@@ -25,7 +25,7 @@
       <div class="logo d-flex align-items-center">
         <a href="/" aria-label="Home" class="d-flex align-items-center text-decoration-none">
           <img src="/Aniket2.png" alt="Logo" class="logo-img" style="height: 50px; margin-right:-17px;margin-left:-30px;">
-          <span class="gradient-text fw-bold">Classes</span>
+          <span class="gradient-text fw-bold" >Classes</span>
         </a>
       </div>
 
@@ -37,17 +37,20 @@
       </div>
 
       <!-- Navigation Links -->
-      <ul class="nav-links list-unstyled d-lg-flex gap-4 mb-0 align-items-center" id="nav-links"style="margin-right: 50px;">
-        <li><a href="/" class="nav-link" data-page="home">Home</a></li>
-        <li><a href="/about" class="nav-link" data-page="about">About</a></li>
-        <li><a href="/courses" class="nav-link" data-page="courses">Class & Courses</a></li>
-        <li><a href="/contact" class="nav-link" data-page="contact">Contact</a></li>
-        <li class="dropdown">
-          <a href="#" class="nav-link dropdown-toggle" data-bs-toggle="dropdown" role="button">Login</a>
-          <ul class="dropdown-menu">
-            <li><a href="/loginstudent" class="dropdown-item">Student</a></li>
-            <li><a href="/loginadmin" class="dropdown-item">Admin</a></li>
-          </ul>
+      <ul class="nav-links list-unstyled d-lg-flex gap-4 mb-0 align-items-center" id="nav-links">
+  <li><a href="/" class="nav-link" data-page="home">Home</a></li>
+  <li><a href="/about" class="nav-link" data-page="about">About</a></li>
+  <li><a href="/courses" class="nav-link" data-page="courses">Class & Courses</a></li>
+  <li><a href="/contact" class="nav-link" data-page="contact">Contact</a></li>
+  <li class="nav-item dropdown">
+    <a href="#" class="nav-link dropdown-toggle" data-bs-toggle="dropdown" role="button">Login</a>
+    <ul class="dropdown-menu">
+      <li><a href="/loginstudent" class="dropdown-item">Student</a></li>
+      <li><a href="/loginadmin" class="dropdown-item">Admin</a></li>
+    </ul>
+  </li>
+</ul>
+
         </li>
       </ul>
     </div>
